[package]
name = "cardparse_derive"
version = "0.1.0"
authors = ["aaron <aaron@bkrn.org>"]
edition = "2018"
license = "GPL"
description = "Fixed width text format parsing to structs"
documentation = "https://docs.rs/cardparse"
homepage = "https://github.com/bkrn/cardparse"
repository = "https://github.com/bkrn/cardparse"

[lib]
proc-macro = true

[dependencies]
failure = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features=["derive", "parsing", "extra-traits"]}